--- a/Ceriyo.Infrastructure.WPF/Controls/LocalStringEditor.xaml
+++ b/Ceriyo.Infrastructure.WPF/Controls/LocalStringEditor.xaml
@@ -19,7 +19,7 @@
             <ListView x:Name="ItemsListView"
                       Grid.Row="0"
                       ItemsSource="{Binding ItemsSource,
-                                                RelativeSource={RelativeSource FindAncestor, local:LocalStringEditor,1}}">
+                                            RelativeSource={RelativeSource FindAncestor, local:LocalStringEditor,1}}">
                 <ListView.ItemContainerStyle>
                     <Style TargetType="{x:Type ListViewItem}">
                         <Style.Triggers>
@@ -49,7 +49,12 @@
                                     <ContentControl Content="{Binding}">
                                         <ContentControl.Resources>
                                             <DataTemplate DataType="{x:Type data:LocalStringData}">
-                                                <TextBox Text="{Binding Key}"></TextBox>
+                                                <TextBox Text="{Binding Path=Key,
+                                                                        Mode=TwoWay,
+                                                                        ValidatesOnDataErrors=True,
+                                                                        NotifyOnValidationError=True,
+                                                                        UpdateSourceTrigger=PropertyChanged}"
+                                                         Validation.ErrorTemplate="{StaticResource ErrorTemplate}"></TextBox>
                                             </DataTemplate>
                                         </ContentControl.Resources>
                                     </ContentControl>
@@ -62,9 +67,12 @@
                                     <ContentControl Content="{Binding}">
                                         <ContentControl.Resources>
                                             <DataTemplate DataType="{x:Type data:LocalStringData}">
-                                                <TextBox Text="{Binding Value}"
-                                                         Width="Auto">
-                                                </TextBox>
+                                                <TextBox Text="{Binding Path=Value,
+                                                                        Mode=TwoWay,
+                                                                        ValidatesOnDataErrors=True,
+                                                                        NotifyOnValidationError=True,
+                                                                        UpdateSourceTrigger=PropertyChanged}"
+                                                         Validation.ErrorTemplate="{StaticResource ErrorTemplate}"></TextBox>
                                             </DataTemplate>
                                         </ContentControl.Resources>
                                     </ContentControl>
@@ -75,7 +83,7 @@
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate>
                                     <Button Click="DeleteButtonClicked"
-                                            Width="Auto">
+                                            Width="Auto" >
                                         Delete
                                     </Button>
                                 </DataTemplate>
