Local double editor. Renamed all references to LocalFloat to LocalDouble

--- a/Ceriyo.Toolset.WPF/Views/CreatureEditorView/CreatureEditor.xaml
+++ b/Ceriyo.Toolset.WPF/Views/CreatureEditorView/CreatureEditor.xaml
@@ -245,7 +245,7 @@
 
                     <DataGrid 
                         Grid.Row="3"
-                        ItemsSource="{Binding SelectedCreature.LocalVariables.LocalFloats}"
+                        ItemsSource="{Binding SelectedCreature.LocalVariables.LocalDoubles}"
                         IsEnabled="{Binding IsCreatureSelected}"
                         CanUserAddRows="True">
                         <DataGrid.Columns>
