--- a/Ceriyo.Toolset.WPF/Views/PlaceableEditorView/PlaceableEditor.xaml
+++ b/Ceriyo.Toolset.WPF/Views/PlaceableEditorView/PlaceableEditor.xaml
@@ -301,7 +301,7 @@
 
                     <DataGrid 
                         Grid.Row="3"
-                        ItemsSource="{Binding SelectedPlaceable.LocalVariables.LocalFloats}"
+                        ItemsSource="{Binding SelectedPlaceable.LocalVariables.LocalDoubles}"
                         IsEnabled="{Binding IsPlaceableSelected}"
                         CanUserAddRows="True">
                         <DataGrid.Columns>
